--- a/frontend/src/app/components/carrusel/carrusel.component.html
+++ b/frontend/src/app/components/carrusel/carrusel.component.html
@@ -41,7 +41,7 @@
         Destacado
       </div>
 
-      <!-- Información del producto (Overlay inferior) -->
+      <!-- Información del producto -->
       <div class="absolute bottom-0 left-0 right-0 p-6 z-10">
         
         <!-- Nombre del producto -->
