--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -69,7 +69,7 @@
         [class.ring-indigo-600]="selectedCategory === cat.name"
         class="group bg-white hover:bg-gradient-to-br hover:from-indigo-50 hover:to-purple-50 rounded-xl p-6 shadow-md hover:shadow-xl transition-all transform hover:-translate-y-1 border border-gray-100"
       >
-        <div class="text-4xl mb-3 group-hover:scale-110 transition-transform">{{ cat.icon }}</div>
+        <img [src]="cat.icon" [alt]="cat.name" class="w-12 h-12 mb-3 group-hover:scale-110 transition-transform mx-auto object-contain">
         <div class="text-sm font-semibold text-gray-700 group-hover:text-indigo-600">{{ cat.name }}</div>
       </button>
     </div>
